--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "Private (Atlas) Cloud for Vagrant Boxes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test mocha test/routes/*"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "config": "^3.2.2",
     "express": "^4.17.1",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "ioredis": "^4.14.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "mocha": "^6.2.0",
+    "supertest": "^4.0.2"
+  }
 }
