--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "NODE_ENV=test mocha test/routes/*"
   },
+  "engines": {
+    "node": ">=10"
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -13,10 +16,8 @@
     "fastify": "^2.8.0",
     "fastify-multipart": "^1.0.2",
     "fastify-plugin": "^1.6.0",
-    "fastify-redis": "^3.1.1",
     "fastify-static": "^2.5.0",
-    "ioredis": "^4.14.1",
-    "pump": "^3.0.0"
+    "pump-promise": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^6.2.0",
