--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "fastify": "^2.8.0",
     "fastify-multipart": "^1.0.2",
     "fastify-plugin": "^1.6.0",
-    "fastify-static": "^2.5.0",
-    "pump-promise": "^1.0.0"
+    "fastify-static": "^2.5.0"
   },
   "devDependencies": {
     "mocha": "^6.2.0",
