--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "config": "^3.2.2",
     "fastify": "^2.8.0",
     "fastify-multipart": "^1.0.2",
-    "fastify-plugin": "^1.6.0",
-    "fastify-static": "^2.5.0"
+    "fastify-plugin": "^1.6.0"
   },
   "devDependencies": {
     "mocha": "^6.2.0",
