--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "config": "^3.2.3",
-    "fastify": "^2.10.0",
-    "fastify-multipart": "^1.0.2",
-    "fastify-plugin": "^1.6.0"
+    "config": "^3.3.1",
+    "fastify": "^2.14.0",
+    "fastify-multipart": "^1.0.5",
+    "fastify-plugin": "^1.6.1"
   },
   "devDependencies": {
-    "mocha": "^6.2.2",
+    "got": "^11.1.0",
+    "mocha": "^6.2.3",
     "supertest": "^4.0.2"
   },
   "repository": {
