--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vagrant-private-cloud",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Private (Atlas) Cloud for Vagrant Boxes",
   "main": "index.js",
   "scripts": {
@@ -10,18 +10,18 @@
   "engines": {
     "node": ">=10"
   },
-  "author": "",
+  "author": "Gabriel Barbieru <barbieru.gabriel@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "config": "^3.3.2",
-    "fastify": "^2.15.3",
-    "fastify-multipart": "^5.3.1",
-    "fastify-plugin": "^1.6.1"
+    "@fastify/multipart": "^7.5.0",
+    "config": "^3.3.9",
+    "fastify": "^4.14.1",
+    "fastify-plugin": "^4.5.0"
   },
   "devDependencies": {
-    "got": "^11.8.0",
+    "got": "^12.6.0",
     "mocha": "^10.2.0",
-    "supertest": "^4.0.2"
+    "supertest": "^6.3.3"
   },
   "repository": {
     "type": "git",
